convert compose in k8s/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/serg: "true"
        io.kompose.service: jenkins
    spec:
      containers:
        - image: jenkins
          name: jenkins
          ports:
            - containerPort: 8080
          resources: {}
          stdin: true
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: jenkins-claim0
            - mountPath: /var/lib/jenkins/workspace
              name: workspace
      restartPolicy: Always
      volumes:
        - name: jenkins-claim0
          persistentVolumeClaim:
            claimName: jenkins-claim0
        - name: workspace
          persistentVolumeClaim:
            claimName: workspace
status: {}
