convert compose in k8s/nexus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: nexus
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nexus
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/serg: "true"
        io.kompose.service: nexus
    spec:
      containers:
        - image: nexus
          name: nexus
          ports:
            - containerPort: 8081
          resources: {}
          stdin: true
      restartPolicy: Always
status: {}
