convert compose in k8s/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: nexus
  name: nexus
spec:
  ports:
    - name: "81"
      port: 81
      targetPort: 8081
  selector:
    io.kompose.service: nexus
status:
  loadBalancer: {}
