convert compose in k8s/serg-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: serg
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/serg: "true"
  podSelector:
    matchLabels:
      io.kompose.network/serg: "true"
